--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -5,7 +5,6 @@ $maxVW: 1200px;
 $minFS: 15px;
 $maxFS: 18px;
 
-
 @import url("https://fonts.googleapis.com/css2?family=Texturina:ital,opsz,wght@0,12..72,100;0,12..72,200;0,12..72,300;0,12..72,400;0,12..72,500;0,12..72,600;0,12..72,700;0,12..72,800;0,12..72,900;1,12..72,100;1,12..72,200;1,12..72,300;1,12..72,400;1,12..72,500;1,12..72,600;1,12..72,700;1,12..72,800;1,12..72,900&display=swap");
 
 @font-face {
@@ -60,7 +59,6 @@ footer svg {
   font-weight: normal;
   line-height: 1.5;
   border-width: 1px;
-
 }
 
 h1 {
@@ -84,17 +82,18 @@ h4 {
 
 p {
   font-size: typo.$s;
-
 }
-ul,ol{
+ul,
+ol {
   margin-block-end: 0;
 }
-p:has(+ul),p:has(+ol) {
+p:has(+ ul),
+p:has(+ ol) {
   margin-block-end: 0;
   margin-bottom: 0;
 }
 
-li{
+li {
 }
 
 small {
@@ -115,11 +114,9 @@ small {
   }
 }
 
-
 // TODO Refactor <a> and <button> styles which are duplicated.
 @function shadowTemplate($color) {
-  @return 0rem 0.25rem 0.5rem 0rem hsl($color, 0.25),
-  inset 0.125rem 0.125rem 0.5rem 0rem hsl($color, 0.50);
+  @return 0rem 0.25rem 0.5rem 0rem hsl($color, 0.25), inset 0.125rem 0.125rem 0.5rem 0rem hsl($color, 0.5);
 }
 
 a.button {
@@ -127,6 +124,7 @@ a.button {
   border-radius: 4px;
   min-width: 10.5rem;
   border-width: 1px;
+  border-style: solid;
   padding: 0.75rem 1.5rem;
   font-size: typo.$s;
   outline: none;
@@ -149,14 +147,17 @@ a.button {
     box-shadow: none;
   }
 
-  &:hover, &:active, &:focus {
+  &:hover,
+  &:active,
+  &:focus {
     background-color: hsl(var(--english-breakfast-700));
     border-color: hsl(var(--english-breakfast-700));
     color: hsl(var(--starbright-600));
     box-shadow: shadowTemplate(var(--english-breakfast-800));
   }
 
-  &[disabled], &[disabled]:hover {
+  &[disabled],
+  &[disabled]:hover {
     background-color: hsl(var(--smooth-coffee-200));
     border-color: hsl(var(--smooth-coffee-200));
     color: hsl(var(--smooth-coffee-500));
