--- a/src/stylesheets/_theme.scss
+++ b/src/stylesheets/_theme.scss
@@ -188,15 +188,19 @@ select {
   color: hsl(var(--smooth-coffee-600));
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+textarea::-webkit-scrollbar {
   width: 1em;
 }
 
-body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,
+textarea::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px hsl(var(--english-breakfast-600), 0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-corner {
   background-color: hsl(38, 58%, 96%);
   outline: 1px solid hsl(var(--english-breakfast-300));
   border-radius: 1px;
