style: add chinese-red color to palette

--- a/src/stylesheets/_theme.scss
+++ b/src/stylesheets/_theme.scss
@@ -101,6 +101,18 @@
   --starbright-900: 49, 10%, 35%;
   --starbright-1000: 47, 10%, 17%;
 
+  /* Chinese Red */
+  --chinese-red-100: 351, 67%, 94%;
+  --chinese-red-200: 352, 67%, 88%;
+  --chinese-red-300: 353, 66%, 77%;
+  --chinese-red-400: 353, 66%, 65%;
+  --chinese-red-500: 353, 66%, 53%;
+  --chinese-red-600: 353, 93%, 42%;
+  --chinese-red-700: 353, 93%, 33%;
+  --chinese-red-800: 353, 94%, 25%;
+  --chinese-red-900: 353, 93%, 17%;
+  --chinese-red-1000: 352, 95%, 8%;
+
   --background: 38, 58%, 96%;
 }
 
