--- a/src/stylesheets/variables/_breakpoints.scss
+++ b/src/stylesheets/variables/_breakpoints.scss
@@ -1,8 +1,3 @@
-// Small tablets (portrait view)
-
-$sm: 480px;
-$md: 780px;
-// Tablets and small desktops
-$lg: 992px;
-// Large tablets and desktops
-$xl: 1200px;
+$small: 600px;
+$large: 1200px;
+$navbar: 780px;
