--- a/src/components/others/navigation/index.module.scss
+++ b/src/components/others/navigation/index.module.scss
@@ -5,7 +5,7 @@
 $body-margin: 2.5rem;
 
 @mixin hideBelowTabletSize {
-  @media only screen and (max-width: breakpoints.$md) {
+  @media only screen and (max-width: breakpoints.$navbar) {
     display: none;
   }
 }
@@ -18,8 +18,6 @@ $body-margin: 2.5rem;
   z-index: 1000;
   border-bottom: 1px solid hsl(var(--english-breakfast-600));
   border-top: 1px solid hsl(var(--english-breakfast-600));
-
-
 
   &.fixedAtTop {
     position: fixed;
