--- a/src/components/others/navigation/index.module.scss
+++ b/src/components/others/navigation/index.module.scss
@@ -5,7 +5,7 @@
 $body-margin: 2.5rem;
 
 @mixin hideBelowTabletSize {
-  @media only screen and (max-width: breakpoints.$navbar) {
+  @media only screen and (max-width: breakpoints.$large) {
     display: none;
   }
 }
