--- a/src/components/others/route_article/keyMetrics/index.module.scss
+++ b/src/components/others/route_article/keyMetrics/index.module.scss
@@ -1,22 +1,39 @@
 @use "src/stylesheets/variables/spacings";
 @use "src/stylesheets/variables/typo";
+@use "src/stylesheets/variables/breakpoints";
 
 .containerKeyMetrics {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: spacings.$s-7;
+  flex-direction: column;
+
+  @media (min-width: breakpoints.$small) {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: spacings.$s-7;
+  }
 }
 
 .trustScore {
-  font-size: typo.$xl;
+  font-size: typo.$m;
 
   .unit {
     margin-left: spacings.$s-1;
-    font-size: typo.$l;
+    font-size: typo.$m;
+  }
+  @media (min-width: breakpoints.$small) {
+    font-size: typo.$xl;
+
+    .unit {
+      font-size: typo.$xl;
+    }
   }
 }
 
 .bountyAmount {
-  font-size: typo.$xl;
-  text-align: end;
+  font-size: typo.$m;
+
+  @media (min-width: breakpoints.$small) {
+    font-size: typo.$xl;
+    text-align: end;
+  }
 }
