fix(eventlog): use design icons

--- a/src/components/others/eventLog/index.module.scss
+++ b/src/components/others/eventLog/index.module.scss
@@ -32,6 +32,11 @@
       margin-bottom: spacings.$s-7;
     }
 
+    .expandButton {
+      width: spacings.$s-6;
+      height: spacings.$s-6;
+    }
+
     a {
       text-decoration: underline;
     }
