style(progress-bar): change innermost bg to transparent

--- a/src/components/presentational/progressBar/index.module.scss
+++ b/src/components/presentational/progressBar/index.module.scss
@@ -17,6 +17,7 @@ $pinkDarken: hsl(313, 74%, 35%);
   }
 
   :global(.ant-progress-inner) {
+    background: transparent;
     border: 1px solid $brownDarken20;
     height: spacings.$s-4;
     border-radius: 4px;
