refactor: apply changes due to redesigned web3 connection layer

--- a/src/components/others/navigation/index.module.scss
+++ b/src/components/others/navigation/index.module.scss
@@ -19,8 +19,6 @@ $body-margin: 2.5rem;
   border-bottom: 1px solid hsl(var(--english-breakfast-600));
   border-top: 1px solid hsl(var(--english-breakfast-600));
 
-
-
   &.fixedAtTop {
     position: fixed;
     top: 0;
@@ -51,7 +49,7 @@ $body-margin: 2.5rem;
 
   .navEthereum {
     display: flex;
-    flex-direction: row;
+    align-items: center;
   }
 }
 
